# mti-dsa

./: .gitignore  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  go.yml  tests.yml
docs/: common.md  dsa.md  index.md  lab00.md  lab01.md  lab02.md  lab02_random.md  lab03.md  lab04.md  lab05.md  lab06.md  lab07.md  lab08.md  lab09.md  lab10.md  lab11.md  notes.md  roadmap.md
docs/foundations/03-python-basics/: exercises-loops.md  index.md
docs/foundations/06-oop-principles/: lecture-03-solid.md
docs/foundations/09-class-hierarchies/: lecture-01-stdlib.md
docs/labs/: index.md
docs/ops/11-application-development/: lecture-04-standalone.md
docs/ops/12-code-quality-and-testing/: lecture-02-advanced-testing.md
docs/practice/: cheatsheet.md  index.md  interview.md  practice.md
docs/tickets/: index.md
labs/: lab00.py  lab01.py  lab02.py  lab02_random.py  lab05.py  lab09.py  lab10.py  lab11.py
labs/common/: __init__.py  ranges.py
scripts/: go-coverage.awk  new-lab.sh
src/golang/advanced/: go.mod
src/golang/advanced/l03-http/client/: main.go  (+1 more)
src/golang/advanced/l04-json/: main.go  main_test.go
src/golang/basics/: go.mod
src/golang/basics/l06-packages/: main.go
src/golang/dsa/: go.mod
src/golang/dsa/lab01/: lab01.go  lab01_test.go
src/golang/dsa/lab02/: lab02.go  lab02_test.go
src/golang/dsa/lab03/: lab03.go  lab03_test.go
src/golang/dsa/lab04/: lab04.go  lab04_test.go
src/golang/dsa/lab05/: lab05.go  lab05_test.go
src/python/labs/: lab01.py  lab02.py  lab03.py  lab04.py  lab05.py  lab06.py  lab07.py  lab08.py  lab09.py  lab10.py  lab11.py
src/python/labs/common/: __init__.py  arrays.py  console.py  ranges.py
src/python/tasks/: __init__.py
src/python/tasks/interview/: __init__.py  array_intersection.py  common_in_three.py  contains_duplicate.py  daily_temperatures.py  first_unique_char.py  k_closest.py  max_consecutive_repeats.py  missing_number.py  move_zeroes.py  plus_one.py  remove_duplicates.py  reverse_string.py  rotate_array.py  second_max.py  single_number.py  two_sum.py  two_sum_sorted.py  valid_anagram.py
src/python/tasks/loops/: task1.py  task2.py  task3.py  task4.py  task5.py  task6.py  task7.py
tests/: test_common.py  test_lab00.py  test_lab01.py  test_lab02.py  test_lab02_random.py  test_lab03.py  test_lab04.py  test_lab05.py  test_lab06.py  test_lab07.py  test_lab08.py  test_lab09.py  test_lab10.py  test_lab11.py
tests/interview/: test_interview_arrays.py  test_interview_bits.py  test_interview_hashing.py  test_interview_search.py
(+1 files in other folders)
